--- a/app/html/login.html
+++ b/app/html/login.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>用户登录 - 客户端Demo</title>
+    <title>用户登录</title>
     <link rel="stylesheet" href="../css/login.css" />
   </head>
 
   <body>
     <form onsubmit="return false;">
       <label>Electron Client Deom</label>
-      <input class="username" type="text" maxlength="60" placeholder="班级代号" required autofocus>
+      <input class="username" type="text" maxlength="60" placeholder="账号" required autofocus>
       <input class="password" type="password" maxlength="30" placeholder="密码" required>
       <button class="login" type="submit">登录</button>
     </form>
