--- a/app/html/main.html
+++ b/app/html/main.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="../css/home.css">
   </head>
 
-  <body>
+  <body style="-webkit-app-region: drag">
+    <div class="syslog"></div>
     <div id="page"></div>
 
     <script>
